syntax = "proto3";

package comment;

service CommentService {
  rpc CreateComment (CreateCommentArgs) returns (Comment) {}
  rpc GetComments (GetCommentsArgs) returns (Comments) {}
  rpc CommentsForMedia (CommentsForMediaArgs) returns (CommentsForMedia) {}
  rpc UpdateComment (UpdateCommentArgs) returns (Comment) {}
  rpc DeleteComment (DeleteCommentArgs) returns (Comment) {}
}

message Comment {
  string _id = 1;
  optional string parentId = 2;
  string userId = 3;
  string mediaId = 4;
  string text = 5;
  string _createdAt = 6;
  string _updatedAt = 7;
}

message Comments {
  repeated Comment comments = 1;
}

message CommentsForMediaArgs {
  string mediaId = 1;
}

message CommentForMedia {
  string commentId = 1;
  repeated CommentForMedia children = 2;
}

message CommentsForMedia {
  repeated CommentForMedia comments = 1;
}

message CreateCommentArgs {
  optional string parentId = 1;
  string userId = 2;
  string mediaId = 3;
  string text = 4;
}

message GetCommentsFilters {
  optional string mediaId = 1;
  optional string parentId = 2;
  optional string userId = 3;
}

message GetCommentsArgs{
  repeated string ids = 1;
  optional GetCommentsFilters filters = 2;
}

message UpdateCommentArgs {
  string _id = 1;
  string text = 2;
}

message DeleteCommentArgs {
  string _id = 1;
}
